# manutencao_preditiva_databricks

./: .gitignore  PLANO_SLIDES.md  README.md  docker-compose.yml  pyproject.toml  update_gold_models.py
dashboards/: .gitkeep  PLAN.md  README.md  sql_dashboard_queries.sql
docker/: init.sql
jobs/: README.md  manufacturing_lakehouse_job.yaml
models/gold/: dim_defeito.dbquery.ipynb  dim_defeito.ipynb  dim_equipamento.dbquery.ipynb  dim_equipamento.ipynb  dim_equipamento_scd.dbquery.ipynb  dim_equipamento_scd.ipynb  dim_produto.ipynb  dim_tecnico.dbquery.ipynb  dim_tecnico.ipynb  dim_tempo.dbquery.ipynb  dim_tempo.ipynb  dim_tipo_manutencao.dbquery.ipynb  dim_tipo_manutencao.ipynb  fact_iot_agregado.ipynb  fact_manutencao.dbquery.ipynb  fact_manutencao.ipynb  fact_producao.dbquery.ipynb  fact_producao.ipynb  fact_qualidade.dbquery.ipynb  fact_qualidade.ipynb  vw_downtime_por_causa.ipynb  vw_equipamentos_criticos.dbquery.ipynb  vw_equipamentos_criticos.ipynb  vw_oee_diario.dbquery.ipynb  vw_oee_diario.ipynb  vw_tendencias_sensores.ipynb
models/silver/: equipment_clean.dbquery.ipynb  equipment_clean.ipynb  equipment_scd.dbquery.ipynb  equipment_scd.ipynb  iot_readings_clean.dbquery.ipynb  iot_readings_clean.ipynb  maintenance_orders_clean.ipynb  production_orders_clean.dbquery.ipynb  production_orders_clean.ipynb  (+1 more)
notebooks/: bronze_layer.ipynb  bronze_simulate_updates.py  clean_silver_gold.ipynb  gold_layer.ipynb  silver_layer.ipynb  silver_layer_full_load.ipynb
scripts/: __init__.py
tests/: __init__.py  test_databricks_comparison.py  test_db_connection.py
(+12 files in other folders)
