[project]
name = "manufatura-data-generators"
version = "0.1.0"
description = "Geradores de dados e scripts de ingestão para projeto de manufatura"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "faker>=20.0.0",
    "python-dotenv>=1.0.0",
    "databricks-sql-connector>=3.0.0",
    "pyspark>=3.5.0",
    "delta-spark>=2.4.0",
    "rich>=13.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
test-db = "tests.test_db_connection:main"
equipment-gen = "scripts.generators.equipment_generator:main"
iot-gen = "scripts.generators.iot_generator:main"
production-gen = "scripts.generators.production_generator:main"
maintenance-gen = "scripts.generators.maintenance_generator:main"
quality-gen = "scripts.generators.quality_generator:main"
ingest = "scripts.ingestion.databricks_bronze_ingestion:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
